Simplify label detection with new QUOTE token
label rule changed from (QUOTE STRING_LITERAL* QUOTE)+ to
QUOTE STRING_LITERAL* QUOTE | IDENTIFIER. Each quoted string is now a
separate label node, so getLabelList().size() directly gives the count.

Removed quote-counting logic from TerragruntLabelCountInspection.